--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -33,11 +33,12 @@ spring:
       prefix: /WEB-INF/jsp/
       suffix: .jsp
   datasource:
-    url: jdbc:postgresql://localhost:5433/postgres
+    url: jdbc:postgresql://localhost:5432/springdata
     username: postgres
     password: root
     driver-class-name: org.postgresql.Driver
   jpa:
+    open-in-view: false
     properties.hibernate:
       show_sql: true
       format_sql: true
