--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,12 @@ plugins {
     id "io.freefair.lombok" version "8.0.1"
     id 'org.springframework.boot' version '3.1.0'
     id 'io.spring.dependency-management' version '1.1.0'
+    id 'com.ewerk.gradle.plugins.querydsl' version '1.0.10'
     id 'java'
+}
+
+configurations {
+    querydsl.extendsFrom implementation, compileOnly, runtimeOnly
 }
 
 group 'by.itacademy'
@@ -21,6 +26,18 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     implementation 'org.apache.tomcat.embed:tomcat-embed-jasper'
     implementation 'org.postgresql:postgresql'
+    implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
+    annotationProcessor 'com.querydsl:querydsl-apt'
+}
+
+querydsl {
+    jpa = true
+    library = 'com.querydsl:querydsl-apt:5.0.0:jakarta'
+    querydslSourcesDir = "$buildDir/generated/sources/annotationProcessor/java/main"
+}
+
+compileQuerydsl {
+    options.annotationProcessorPath = configurations.querydsl
 }
 
 test {
