--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,7 @@ dependencies {
     implementation 'org.apache.tomcat.embed:tomcat-embed-jasper'
     implementation 'org.postgresql:postgresql'
     implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.4'
     annotationProcessor 'com.querydsl:querydsl-apt'
 }
 
@@ -36,6 +37,8 @@ querydsl {
     library = 'com.querydsl:querydsl-apt:5.0.0:jakarta'
     querydslSourcesDir = "$buildDir/generated/sources/annotationProcessor/java/main"
 }
+
+initQuerydslSourcesDir.dependsOn clean
 
 compileQuerydsl {
     options.annotationProcessorPath = configurations.querydsl
